[package]
name = "nl-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.16" }
safety-net = { version = "0.2.1", features = ["graph"] }
sv-parser = { version = "0.13.3" }
flussab-aiger = { version = "0.1.1" }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
petgraph = { version = "0.8.2" }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = []
# default = [ "serde" ]
serde = [ "safety-net/serde" ]
