[package]
name = "nl-compiler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

categories = [
    "data-structures",
    "compilers",
    "science",
]

description = "AIG and Verilog frontend compilers"

# documentation = "https://matth2k.github.io/safety-net/"
# homepage = "https://matth2k.github.io/safety-net/"
include = [
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs",
    "tests/**/*.rs",
    "examples/**/*.rs",
]

keywords = [
    "data-structures",
    "eda",
    "netlist",
    "circuits",
    "hardware",
]

readme = "README.md"


# repository = "https://github.com/matth2k/nl-compiler"

[dependencies]
thiserror = { version = "2.0.16" }
safety-net = { version = "0.3.0", features = ["graph"] }
sv-parser = { version = "0.13.3" }
flussab = { version = "0.3.1" }
flussab-aiger = { version = "0.1.1" }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
petgraph = { version = "0.8.2" }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = []
# default = [ "serde" ]
serde = [ "safety-net/serde" ]
