[package]
name = "nl-compiler"
version = "0.1.19"
edition = "2024"
license = "MIT OR Apache-2.0"

categories = [
    "data-structures",
    "compilers",
    "science",
]

description = "AIG and Verilog frontend compilers"

documentation = "https://matth2k.github.io/safety-net/"
homepage = "https://matth2k.github.io/safety-net/"
include = [
    "Cargo.toml",
    "clippy.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs",
    "tests/**/*.rs",
    "examples/**/*.rs",
]

keywords = [
    "data-structures",
    "eda",
    "netlist",
    "circuits",
    "hardware",
]

readme = "README.md"


repository = "https://github.com/matth2k/nl-compiler"

[dependencies]
thiserror = { version = "2.0.18" }
safety-net = { version = "0.7.1", features = ["graph"] }
sv-parser = { version = "0.13.5" }
flussab = { version = "0.3.1" }
flussab-aiger = { version = "0.1.1" }

[dev-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
petgraph = { version = "0.8.3" }
lipsum = { version = "0.9.1" }
rand = { version = "0.8.5" }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
# default = [ "serde" ]
serde = [ "safety-net/serde" ]
